--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tour de France 2015 chart</title>
-    <script type="text/javascript" src="lib/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/jquery.flot.min.js"></script>
-    <script type="text/javascript" src="lib/jquery.flot.time.min.js"></script>
-    <script type="text/javascript" src="lib/jquery.flot.symbol.min.js"></script>
+    <title>Giro 2016 chart</title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.symbol.min.js"></script>
     <script type="text/javascript" src="src/plot.js"></script>
     <!-- <script type="text/javascript" src="lib/jquery.flot.axislabels.min.js"></script>-->
     <style type="text/css">
