--- a/index.html
+++ b/index.html
@@ -51,11 +51,20 @@
         width: 30%;
         float: left;
     }
+    #tooltip {
+        position: absolute;
+        display: none;
+        border: 1px solid  #ddd;
+        padding: 2px;
+        background-color: #eee;
+        opacity: 0.80;
+    }
     </style>
 
     <script type="text/javascript">
     $(document).ready(function(){
         var data = [];
+        bind_handlers();
         $.plot("#flot-placeholder", [data]);
 
         $.getJSON('data/output.json', function(json, textStatus) {
@@ -100,6 +109,8 @@
                 <div id="flot-placeholder" class="placeholder"></div>
             </div>
 		</div>
+    </div>
+    <div id="tooltip">
     </div>
 </body>
 </html>
