--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         bindHandlers();
         $.plot("#flot-placeholder", [data]);
 
+        /*
         $.getJSON('data/output.json', function(json, textStatus) {
             $.getJSON('data/teams.json', function(teams, textStatus2) {
                 dataset = filterTopRiders(15, json, new Map(teams));
@@ -75,7 +76,7 @@
             console.error("getJSON failed, status: " +
                             textStatus + ",error: "+error);
 
-        });
+        }); */
     });
     </script>
 </head>
@@ -96,20 +97,20 @@
     </nav>
 
     <div class="container">
-        <div id="elm-app">
-        </div>
-        <!-- <div class="starter-template"> -->
-        <!--     <h1>Giro d'Italia 2018 General Classification gaps</h1> -->
-        <!--     <p>How the gap (in seconds) evolved over every stage.</p> -->
-        <!--     <div class="data-container"> -->
+        <div class="starter-template">
+            <h1>Giro d'Italia 2018 General Classification gaps</h1>
+            <p>How the gap (in seconds) evolved over every stage.</p>
+            <div class="data-container">
+            <div id="elm-app">
+            </div>
         <!--         <div id="referenceContainer">Reference rider:<select -->
         <!--                 id="reference"></select></div> -->
         <!--         <div id="checkboxes" class="right-box"></div> -->
-        <!--         <div id="flot-placeholder" class="placeholder"></div> -->
-        <!--     </div> -->
-        <!-- </div> -->
-        <!-- <div id="tooltip"> -->
-        <!-- </div> -->
+                <div id="flot-placeholder" class="placeholder"></div>
+            </div>
+        </div>
+        <div id="tooltip">
+        </div>
         <div id="about" class="starter-template">
             <h3>About</h3>
             <p>While most cycling sites provide great information about how the General Classification battle evolves, I couldn't find
