Basic plotting started.

--- a/index.html
+++ b/index.html
@@ -10,22 +10,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.symbol.min.js"></script>
-    <script type="text/javascript" src="src/plot.js"></script>
-    <!-- <script type="text/javascript" src="lib/jquery.flot.axislabels.min.js"></script>-->
-
-    <!-- <link rel="stylesheet" -->
-    <!-- href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" -->
-    <!-- integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" -->
-    <!-- crossorigin="anonymous"> -->
-
-    <!-- <script -->
-    <!-- src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" -->
-    <!-- integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" -->
-    <!-- crossorigin="anonymous"></script> -->
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
@@ -42,10 +26,14 @@
         height: 500px;
         margin-left: 30%;
     }
-    .right-box {
+    .left-box {
         width: 30%;
         float: left;
     }
+    <!-- .right-box { -->
+    <!--     width: 70%; -->
+    <!--     float: right; -->
+    <!-- } -->
     #tooltip {
         position: absolute;
         display: none;
@@ -56,29 +44,6 @@
     }
     </style>
 
-    <script type="text/javascript">
-    $(document).ready(function(){
-        var data = [];
-        bindHandlers();
-        $.plot("#flot-placeholder", [data]);
-
-        /*
-        $.getJSON('data/output.json', function(json, textStatus) {
-            $.getJSON('data/teams.json', function(teams, textStatus2) {
-                dataset = filterTopRiders(15, json, new Map(teams));
-                fillReferenceCombo(dataset);
-                fillCheckboxes(dataset);
-                plotAccordingToChoices(dataset);
-            }).fail(function(d, textStatus2, error){
-                console.error("getJSON failed, status: " + textStatus2 + ", error: " + error);
-            });
-        }).fail(function(d, textStatus, error){
-            console.error("getJSON failed, status: " +
-                            textStatus + ",error: "+error);
-
-        }); */
-    });
-    </script>
 </head>
 <body>
 
